@@ -7,6 +7,9 @@
 
 	* mail/rmail.el (rmail-retry-ignored-headers): Add message-id.
 	(rmail-show-message-1): Preserve buffer modified flag.
+	(rmail-start-mail): Don't specify use of rmail-mail-return;
+	that's done by mail-bury now.
+	(rmail-mail-return): Handle arg NEWBUF.
 
 2011-06-23  Michael Albinus  <michael.albinus@gmx.de>
 
